--- a/popup.html
+++ b/popup.html
@@ -79,7 +79,15 @@
 
             
             <h4>Result:</h4>
-            <textarea id="summary" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
+            <textarea id="summary1" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
+
+            <textarea id="summar2" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
+
+            <textarea id="summary3" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
+
+            <textarea id="summar4" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
+
+            <textarea id="summary5" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
 
 
             <!-- Add Bookmark Here -->
