--- a/index.html
+++ b/index.html
@@ -45,8 +45,13 @@
         </br>
         <script src="script.js"></script>
 
-        <input type="text" id="searchInput" placeholder="Type your search term...">
-        <button onclick="performSearch()">Search</button>
+       <!--  <input type="text" id="searchInput" placeholder="Type your search term...">
+        <button onclick="performSearch()">Search</button> -->
+
+        <form action="https://www.google.com/search" method="GET">
+        <input type="text" name="q" placeholder="Search for a topic..." />
+        <input type="submit" value="Search" />
+        </form>
 
         
         <h4>Result:</h4>
