--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 margin:0;
                 display:flex;
                 flex-direction:column;
+                width: 400px;
             }
 
             footer {
