return results to web page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         
         <h4>Result:</h4>
-        <textarea id="summary1" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
+        <textarea id="result" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
 
         <textarea id="summar2" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
 
