get bookmarks function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-analytics.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
-        <script src="bookmarks/firebase.js"></script>
+        <script type="module" src="bookmarks/firebase.js"></script>
         <style>
         
             body {
