--- a/bookmarks/view_bookmarks.html
+++ b/bookmarks/view_bookmarks.html
@@ -21,7 +21,12 @@
         <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-analytics.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
-        <script type="module" src="bookmarks/firebase.js"></script>
+        <script type="module" src="firebase.js"></script>
+
+        <!-- view bookmarks script-->
+        <script src="./view_bookmarks.js"></script>
+
+
         <style>
         
             body {
@@ -51,32 +56,23 @@
             <i class="glyphicon glyphicon-envelope"></i>
         </h1>
         </br>
-        <script src="script.js"></script>
-
-        <input type="text" id="searchInput" placeholder="Type your search term...">
-        <button onclick="performSearch()">Search</button>
-
-
         
-        <h4>Result:</h4>
-        <textarea id="result" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
-        <textarea id="summar2" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
-        <textarea id="summary3" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
-        <textarea id="summar4" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
-        <textarea id="summary5" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
+        <h4>Bookmarks:</h4>
+        <div id="bookmarks">
 
+        </div>
+        <!--
+        <textarea id="bookmark1" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
+        <textarea id="bookmark2" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
+        <textarea id="bookmark3" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
+        <textarea id="bookmark4" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
+        <textarea id="bookmark5" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm" placeholder="Result"></textarea>
+    -->
 
-        <!-- Add Bookmark Here -->
-        <label class="add-fav" style="float:right">
-        <input type="checkbox" />
-        <i class="icon-star">
-        <i class="icon-plus-sign"></i>
-        </i>
-        </label>
 
         <!-- View Bookmarks -->
-        <a href="bookmarks/view_bookmarks.html">
-            <button>View Bookmarks</button>
+        <a href="../index.html">
+            <button>Back to Main Page</button>
         </a>
     </div>  
 
