--- a/bookmarks/view_bookmarks.html
+++ b/bookmarks/view_bookmarks.html
@@ -19,15 +19,13 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <!-- firebase -->
     <!-- Firebase App and SDKs -->
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
-    <!-- <script type="module" src="firebase.js"></script> -->
 
-    <!-- view bookmarks script-->
+    <!-- view bookmarks + firebase set up script-->
     <script type="module" src="view_bookmarks.js"></script>
 
 
@@ -68,7 +66,7 @@
         .bookmark-title-div, .bookmark-url-div, .bookmark-description-div{
             margin-bottom: 5px;
         }
-        
+
     </style>
 
 </head>
