re add bookmark button

--- a/index.html
+++ b/index.html
@@ -69,19 +69,20 @@
         <h4>Result:</h4>
         <textarea id="result1" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm"
             placeholder="Result"></textarea>
+            <button class="add-bookmark-button" id="add-bookmark-2">Add Bookmark</button>
 
         <textarea id="result2" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm"
             placeholder="Result"></textarea>
-
+            <button class="add-bookmark-button" id="add-bookmark-2">Add Bookmark</button>
         <textarea id="result3" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm"
             placeholder="Result"></textarea>
-
+            <button class="add-bookmark-button" id="add-bookmark-2">Add Bookmark</button>
         <textarea id="result4" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm"
             placeholder="Result"></textarea>
-
+            <button class="add-bookmark-button" id="add-bookmark-2">Add Bookmark</button>
         <textarea id="result5" class="form-control" rows="2" aria-label="Large" aria-describedby="inputGroup-sizing-sm"
             placeholder="Result"></textarea>
-
+            <button class="add-bookmark-button" id="add-bookmark-2">Add Bookmark</button>
         <!-- View Bookmarks -->
         <div>
             <a href="bookmarks/view_bookmarks.html">
