--- a/bookmarks/view_bookmarks.html
+++ b/bookmarks/view_bookmarks.html
@@ -26,7 +26,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
 
     <!-- view bookmarks + firebase set up script-->
-    <script type="module" src="view_bookmarks.js"></script>
+    <script src="view_bookmarks.js"></script>
 
 
     <style>
