update comments and readme

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
         <input type="text" id="searchInput" class="form-control" style="width: 100%;" placeholder="Type your search term...">
         <center>
             <button id="submit" class="btn btn-info"  type="submit" onclick="performSearch()">Search</button>
-        </center>            
+        </center>
+        <!-- Display Results -->
         <div id="results">
             <h4>Result:</h4>
             <div class="article">
